--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ subjects:
 - !lcsh 'Villages -- Germany -- Fiction'
 - !lcsh 'Illness -- Fiction'
 - !lcc 'PT'
+- GITenberg
 title: Die Last
 url: http://www.gutenberg.org/ebooks/18231
